--- a/ArtBook/app/src/main/res/layout/activity_main2.xml
+++ b/ArtBook/app/src/main/res/layout/activity_main2.xml
@@ -38,8 +38,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32"
-        android:layout_marginBottom="163"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="163dp"
         android:onClick="save"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
