--- a/LandmarkBook/app/src/main/res/layout/activity_detail.xml
+++ b/LandmarkBook/app/src/main/res/layout/activity_detail.xml
@@ -29,7 +29,7 @@
         android:gravity="center_vertical"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="24"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
